# parseltongue

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  turbo.json
apps/cli/: package.json  pyproject.toml  run.js
apps/cli/commands/: check.js  enunciate.js  scrape.js  speak.js
apps/cli/parseltongue_cli/: main.py
apps/cli/parseltongue_cli/commands/: direct.py  scrape.py  speak.py
apps/scraper/: README.md  ao3-adapter.js  metadata.js  package.json  run.js
apps/web/: package.json  pyproject.toml
apps/web/parseltongue_web/: main.py
prompts/: voice-enunciation-system-prompt.md
src/scraper/: README.md
